add a dodgy logo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon"
 	  type="image/png"
-          href="https://assets.guim.co.uk/images/favicons/48bc5564bb01b74cf7cd1a08ae0dd98e/32x32.ico">
+          href="favicon.ico">
     <title>CAPEX</title>
   </head>
   <body>
+    <div><img width="75px" src="logo.png"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
